prueba.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod2 
  name: pod2 
  namespace: development
spec:
  schedulerName: kube-scheduler-none-existing
  containers:
  - image: nginx:1.16.1-alpine
    name: pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
